--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Empresa dedicada a la inistalación reparacion y mantención de equipos electromecánicos.</h2>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>Nuestra misión es ofrecer un servicio de calidad 
+									donde analizaremos el problema y ofreceremos la mejor solución.
+									nuestro enfoque aparte de ser las ya mencionadas es dar 
+									algunas inducciones al cliente sobre cuidados, uso y 
+									funcionamieno de sus equipos.</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>Contamos con servicio técnico de emergencia las 24 horas 
+								    del día 7 días a la semana, donde buscamos entregarles el
+									respaldo a nuestros clientes, obteniendo un tiempo de llegada 
+								    promedio a cada emergencia que fluctúa entre 2 a 4 horas,
+								    dependiendo de la ubicación de cada cliente.</p>
+
 								</div>
 							</div>
 						</div>
@@ -94,32 +94,26 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/ele1.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/seguridad.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>Protocolos de seguridad</h2>
+							<p>Nos regimos por normas y protocolos establecidos por la SEC.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						<p> Contamos con profesionales especializados en el campo, Nuestro compromiso es brindar un apoyo cercano a nuestros clientes, demostrándoles que sus problemas estan en las mejores manos. Buscamos brindar seguridad y conocimiento. Nos caracterizamos por demostrar un buen trato entre trabajador y cliente, mostrando de esta manera nuestro equipo de profesionales.</p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/ss.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/ele1.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Innovación de ideas</h2>
+							<p>Creando proyectos para seguir avanzando</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						<p>Actualmente estamos enfocados en idear innovaciones para una mayor comunicación con nuestros clientes y mejorar la administración y gestión de nuestros servicios, adaptandonos más a las nuevas tecnologías.</p>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
@@ -128,48 +122,43 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Aquí presentaremos diversos elementos que nos caracterizan</h2>
+							<p>Con ello presentando algunas ideas para el interes del cliente</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-area-chart"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Analisis</h3>
+									<p>Al realizar nuestro servicios siempre realizamos un profundo analisis del problema.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Comunicación</h3>
+									<p>Uno de los factores más importantes es siempre tener comunicación con el cliente.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Descrubimiento</h3>
+									<p>Después de analisar y descubrir el problema vemos los metodos para solucionarlo.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Planeación</h3>
+									<p>Al planear la posible solución siempre estará de la mano de la normalización de seguridad.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Documentacion</h3>
+									<p>Después de descubrir y solucionar el problema procedemos a documentarlo con el fin de dar soporte.</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Seguridad</h3>
+									<p>La seguridad siempre será prioridad en cualquier proyecto o servicio que brindemos.</p>
 								</section>
 							</div>
 						</div>
-						<footer class="major">
-							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
-							</ul>
-						</footer>
 					</div>
 				</section>
 
@@ -177,13 +166,18 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Contactanos enviandonos un correo describiendo tu problema</h2>
+							<p>Tu correo será respondido a la brevedad</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
+								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Asunto" /></div>
+							</div>
+						</form>
+						<form method="post" action="#" class="container 50%">
+							<div class="row uniform 50%">
+								<div class="8u 12u$(xsmall)"><input type="Text" name="email" id="Comentario" placeholder="Comentario" /></div>
+								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Enviar" class="fit special" /></div>
 							</div>
 						</form>
 					</div>
