--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
 -->
 <html>
 	<head>
-		<link rel="shortcut icon" href="images/lol.ico"/>
-		<link rel="icon" type="image/x-icon" href="images/lol.ico"/> 
 		<title>Enectra - El Futuro En Nuestras Manos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body class="landing">
+	<body>
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -25,11 +22,11 @@
 					<h1 id="logo"><a href="index.html">Inicio</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Servicios</a></li>
+							<li><a href="nuestroServicio.html">Nuestros Servicios</a></li>
 							<li>
-								<a href="#">Nuestro Trabajo</a>
+								<a href="#">Nuestros Trabajos</a>
 								<ul>
-									<li><a href="left-sidebar.html">Galeria</a></li>
+									<li><a href="galeria.html">Galería</a></li>
 									<!--<li><a href="right-sidebar.html">Demostraciones</a></li>
 									<li><a href="no-sidebar.html">Informacion</a></li>-->
 									<li>
@@ -43,6 +40,7 @@
 									</li>
 								</ul>
 							</li>
+							<li><a href="somos.html">Quienes Somos</a></li>
 							<li><a href="elements.html">Contacto</a></li>
 						</ul>
 					</nav>
@@ -172,7 +170,7 @@
 							<h2>Contactanos enviandonos un correo describiendo tu problema</h2>
 							<p>Tu correo será respondido a la brevedad</p>
 						</header>
-						<form method="post" action="#" class="container 50%">
+						<!--<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
 								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Asunto" /></div>
 							</div>
@@ -182,12 +180,13 @@
 								<div class="8u 12u$(xsmall)"><input type="Text" name="email" id="Comentario" placeholder="Comentario" /></div>
 								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Enviar" class="fit special" /></div>
 							</div>
-						</form>
+						</form>-->
 					</div>
 				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
+					<a href="https://www.google.cl/maps/place/Gral+Freire+1098,+La+Cisterna,+Regi%C3%B3n+Metropolitana/@-33.523462,-70.6492975,17z/data=!4m5!3m4!1s0x9662daf2fa8d2ecf:0x514341e74024f5fb!8m2!3d-33.5230774!4d-70.6473663">General Freire 1098, La Cisterna.</a>
 					<ul class="icons">
 						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
