--- a/recipiente.html
+++ b/recipiente.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Landed by HTML5 UP</title>
+		<title>Enectra - El Futuro En Nuestras Manos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,49 +19,54 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Inicio</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="nuestroServicio.html">Nuestros Servicios</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Nuestros Trabajos</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="galeria.html">Galeria</a></li>
+									<!--<li><a href="right-sidebar.html">Demostraciones</a></li>
+									<li><a href="no-sidebar.html">Informacion</a></li>-->
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Demostraciones</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="#">Prueba de Compresión</a></li>
+											<li><a href="#">Reparación de Radiador</a></li>
+											<li><a href="#">Cambio de Válvula Selenoide</a></li>
+											<li><a href="#">Mantención al enfriador de aceite</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="somos.html">Quienes Somos</a></li>
+							<li><a href="elements.html">Contacto</a></li>
 						</ul>
 					</nav>
 				</header>
+
 
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Elements</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>Nuestros Servicios</h2>
 						</header>
-
-						<!-- Text -->
 							<section>
-								<h3>Text</h3>
-								<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-								This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-								This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-
-								<hr />
+								<h3>Servicios de mantención</h3>
+								<p>En el ámbito del mantenimiento, ofrecemos contratos de mantenimiento preventivo programado para los siguientes equipos:</p>
+                                        <ul>
+											<li>Mantenimiento Grupos Electrógenos.</li>
+											<li>Mantenimiento Bombas de Agua.</li>
+											<li>Mantenimiento Portones Eléctricos.</li>
+											<li>Mantenimiento Extractores.</li>
+											<li>Mantenimiento Presurizadores.</li>
+											<li>Mantenimiento de Redes.</li>
+											<li>Mantenimiento de Corrientes débiles (Citofonía, Camáras de Seguridad, Alarmas de Humo, entre otros).</li>
+											<li>Mantenimiento Eléctrico (Tableros, Circuitos, enchufes, luminarias, etc).</li>
+										</ul>
+								
 
 								<header>
 									<h3>Heading with a Subtitle</h3>
