--- a/somos.html
+++ b/somos.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - Landed by HTML5 UP</title>
+		<title>Enectra - El Futuro En Nuestras Manos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,29 +19,29 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Inicio</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="nuestroServicio.html">Nuestros Servicios</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Nuestros Trabajos</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="galeria.html">Galeria</a></li>
+									<!--<li><a href="right-sidebar.html">Demostraciones</a></li>
+									<li><a href="no-sidebar.html">Informacion</a></li>-->
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Demostraciones</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="#">Prueba de Compresión</a></li>
+											<li><a href="#">Reparación de Radiador</a></li>
+											<li><a href="#">Cambio de Válvula Selenoide</a></li>
+											<li><a href="#">Mantención al enfriador de aceite</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="somos.html">Quienes Somos</a></li>
+							<li><a href="elements.html">Contacto</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -107,6 +107,7 @@
 
 			<!-- Footer -->
 				<footer id="footer">
+					<a href="https://www.google.cl/maps/place/Gral+Freire+1098,+La+Cisterna,+Regi%C3%B3n+Metropolitana/@-33.523462,-70.6492975,17z/data=!4m5!3m4!1s0x9662daf2fa8d2ecf:0x514341e74024f5fb!8m2!3d-33.5230774!4d-70.6473663">General Freire 1098, La Cisterna.</a>
 					<ul class="icons">
 						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
